2009-02-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooserbutton.hg: Added the file_set signal, added in 
	GTK+ 2.14 but not wrapped in gtkmm until now. Thanks to Damon Register 
	for noticing this.

2009-02-08  Murray Cumming  <murrayc@murrayc.com>h>

	* gtk/gtkmm/stock.[h|cc]: Added CAPS_LOCK_WARNING.

	* tools/extra_defs_gen/generate_defs_gtk.cc: Added new interfaces.
	* gtk/src/gtk_signals.defs: Regenerated.

	* gtk/src/Makefile_list_of_hg.am_fragment:
	* gtk/src/gtk_vfuncs.defs:
	* gtk/src/activatable.[hg|ccg]:
	* gtk/src/orientation.[hg|ccg]: Added the new interfaces, though 
	we cannot use them yet without breaking ABI.
	* gtk/src/box.hg:
	* gtk/src/button.hg:
	* gtk/src/buttonbox.hg:
	* gtk/src/menu.hg:
	* gtk/src/menuitem.hg:
	* gtk/src/paned.hg:
	* gtk/src/recentchoosermenu.hg:
	* gtk/src/ruler.hg:
	* gtk/src/scalebutton.hg:
	* gtk/src/scrollbar.hg:
	* gtk/src/separator.hg:
	* gtk/src/toolbutton.hg: Added TODOs about deriving from the new 
	interfaces when we can break ABI. I only did this for base classes, 
	though GTK+ does it for further derived classes too, for some reason.

2.15.3:
(2.15.2 was skipped.)

2009-02-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerated with docextract_to_xml.py, 
	removing some /* and */.
	* gtk/gtkmm/accelmap.h: Unescaped < and > characters in documentation, 
	fixing bug #568485

	* gtk/src/action.hg: Added block_activate() and unblock_activate(), 
	deprecating block_activate_from() and unblock_activate_from() because 
	that is what happened in the C API.

2009-02-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/action.ccg:
	* gtk/src/action.hg: Reimplemented set_tooltip() with the new C 
	gtk_action_set_tooltip() function. Added get/set_label(), 
	get/set_short_label(), get_tooltip(), get/set_stock_id(), 
	get/set_gicon(), get/set_icon_name(), get/set_visible_horizontal(), 