@@ -1,10 +1,17 @@
+2009-02-17  Daniel Elstner  <danielk@openismus.com>
+
+	* demos/gtk-demo/example_appwindow.cc: Cut a load of commented-out
+	bit-rot which wouldn't have compiled anyway.  The use of deprecated
+	GTK+ calls in the comment triggered a code maintenance tool used by
+	André Klapper.
+
 2009-02-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/filechooserbutton.hg: Added the file_set signal, added in 
 	GTK+ 2.14 but not wrapped in gtkmm until now. Thanks to Damon Register 
 	for noticing this.
 
-2009-02-08  Murray Cumming  <murrayc@murrayc.com>h>
+2009-02-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/gtkmm/stock.[h|cc]: Added CAPS_LOCK_WARNING.
 
